started to working on ui

--- a/frontend/studente/src/pages/components/app-bar.component.html
+++ b/frontend/studente/src/pages/components/app-bar.component.html
@@ -2,15 +2,15 @@
  <ion-grid>
     <ion-row>
       <ion-col col-1>
-          <div><button [block]="true" ion-button navPush="Home">APP 1</button>
+          <div><button class="app-bar-button" [block]="true" ion-button navPush="Home">APP 1</button>
         </div>
       </ion-col>
             <ion-col col-1>
-          <div><button [block]="true" ion-button navPush="Home">APP 2</button>
+          <div><button class="app-bar-button" [block]="true" ion-button navPush="Home">APP 2</button>
         </div>
       </ion-col>
             <ion-col col-1>
-          <div><button [block]="true" ion-button navPush="Home">APP 3</button>
+          <div><button class="app-bar-button" [block]="true" ion-button navPush="Home">APP 3</button>
         </div>
       </ion-col>
     </ion-row>
