--- a/frontend/studente/src/pages/components/app-bar.component.scss
+++ b/frontend/studente/src/pages/components/app-bar.component.scss
@@ -1,6 +1,11 @@
 #app-bar {
   position: fixed;
+  left: 0px;
     bottom: 0px;
     width: 100%;
-  background-color: white;
+  background-color: gray;
+  .app-bar-button{
+    background-color: white;
+    color: black;
+  }
 }
