--- a/frontend/studente/src/pages/home/home.scss
+++ b/frontend/studente/src/pages/home/home.scss
@@ -3,15 +3,21 @@ page-home {
   float:left;
   display:inline-block;
   width: 50%;
+
     .home-registration {
-    height: 50px;
-    margin: 5px;
-    padding: 10px;
+height: 50px;
+    text-align: center;
+    line-height: 50px;
+      color: white;
+    background-color: gray;
     }
     .home-exams{
-    height: 50px;
-    margin: 5px;
-    padding: 10px;
+height: 50px;
+    width: 100%;
+    text-align: center;
+    line-height: 50px;
+      color: white;
+    background-color: gray;
     }
 }
 .experiences-list {
@@ -19,10 +25,21 @@ page-home {
   display:inline-block;
   width: 50%;
   .home-experience{
-        height: 50px;
-    margin: 5px;
-    padding: 10px;
+       height: 50px;
+    text-align: center;
+    line-height: 50px;
+    color: white;
+    background-color: gray;
     }
   }
+ .home-title-label {
+      text-align: center;
+   background-color: gray;
+    color: white;
+       height: 40px;
+    line-height: 40px;
+    font-size: 25px;
+   margin: 5px;
+    }
   }
 
