--- a/frontend/studente/src/pages/stages/stages.scss
+++ b/frontend/studente/src/pages/stages/stages.scss
@@ -1,3 +1,12 @@
+.row-add-stage {
+  height: $picker-md-toolbar-height	;
+  position: relative;
+  .button-add-stage{
+    position: absolute;
+    right: 5px;
+  }
+
+}
 .stage-filter{
   width: 100%;
   display: inline-flex;
@@ -7,4 +16,22 @@
   .filter-search-icon{
     font-size: 40px;
   }
+}
+.expandable-list{
+  display: inline-flex;
+  width: 100%;
+  background-color: gray;
+  color: white;
+  padding: 16px;
+  .stage-title{
+    width: 100%!important;
+  }
+  .stage-certificate{
+    width: 50%!important;
+  }
+    .stage-expansion-icon{
+      color: white!important;
+
+  }
+
 }
