--- a/frontend/studente/src/pages/components/button-profile/button-profile.component.html
+++ b/frontend/studente/src/pages/components/button-profile/button-profile.component.html
@@ -1,3 +1,3 @@
-<button ion-button icon-only (click)="goProfile()">
+<button class="button-profile" ion-button icon-only (click)="goProfile()">
   <ion-icon name="md-contact"></ion-icon>
 </button>
