fixed labels and pages, upload certifications

--- a/frontend/studente/src/pages/profile/profile.scss
+++ b/frontend/studente/src/pages/profile/profile.scss
@@ -6,3 +6,9 @@
   display: inline-flex;
   width: 60%;
 }
+.profile-button{
+  background-color: gray;
+}
+.profile-button:hover{
+  background-color: darkgray!important;
+}
