added certifcates for certifications

--- a/frontend/studente/src/pages/login/login.scss
+++ b/frontend/studente/src/pages/login/login.scss
@@ -2,6 +2,9 @@
       width: 150px;
     height: 150px;
     background-color:gray;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .login-button:hover {
 
