--- a/frontend/studente/src/pages/components/button-notifications/button-notifications.component.scss
+++ b/frontend/studente/src/pages/components/button-notifications/button-notifications.component.scss
@@ -1,7 +1,6 @@
 .button-notifications{
-  background-color: gray;
 }
 
   .button-notifications:hover {
-    background-color: darkgray!important;
+     opacity: 0.7;
   }
