--- a/frontend/studente/src/pages/components/button-profile/button-profile.component.scss
+++ b/frontend/studente/src/pages/components/button-profile/button-profile.component.scss
@@ -1,7 +1,6 @@
 .button-profile{
-  background-color: gray;
 
 }
   .button-profile:hover {
-    background-color: darkgray!important;
+     opacity: 0.7;
   }
