--- a/frontend/studente/src/pages/components/app-bar/app-bar.component.scss
+++ b/frontend/studente/src/pages/components/app-bar/app-bar.component.scss
@@ -3,7 +3,7 @@
   left: 0px;
     bottom: 0px;
     width: 100%;
-  background-color: gray;
+  background-color: $link-color;
   .app-expansion-icon{
     color: white;
   }
@@ -14,6 +14,8 @@
   .app-bar-button{
     background-color: white;
     color: black;
+    height: 100px;
+    width: 100px;
   }
 
 }
@@ -21,6 +23,6 @@
    transition: all 0.5s ease-in-out;
   }
   .bar-compressed {
-    bottom:-50px!important;
+    bottom:-120px!important;
     transition: all 0.5s ease-in-out;
   }
