--- a/frontend/studente/src/pages/components/button-home/button-home.component.html
+++ b/frontend/studente/src/pages/components/button-home/button-home.component.html
@@ -1,3 +1,3 @@
-<button class="button-home" ion-button icon-only (click)="goHome()">
+<button class="navigation-button-bar button-home" ion-button   clear (click)="goHome()">
   <ion-icon name="md-home"></ion-icon>
 </button>
