--- a/frontend/studente/src/pages/components/button-notifications/button-notifications.component.html
+++ b/frontend/studente/src/pages/components/button-notifications/button-notifications.component.html
@@ -1,3 +1,3 @@
-<button class="button-notifications" ion-button icon-only (click)="goNotifications()">
+<button class="navigation-button-bar button-notifications" ion-button clear (click)="goNotifications()">
   <ion-icon name="md-notifications"></ion-icon>
 </button>
