--- a/frontend/studente/src/pages/components/button-profile/button-profile.component.html
+++ b/frontend/studente/src/pages/components/button-profile/button-profile.component.html
@@ -1,3 +1,3 @@
-<button class="button-profile" ion-button icon-only (click)="goProfile()">
+ <button class="navigation-button-bar button-profile" ion-button clear (click)="goProfile()">
   <ion-icon name="md-contact"></ion-icon>
 </button>
