--- a/frontend/studente/src/pages/profile/profile.scss
+++ b/frontend/studente/src/pages/profile/profile.scss
@@ -1,3 +1,14 @@
+.profile-page{
+  .profile-title-label{
+    color: $button-color;
+    font-size: 20px;
+  }
+  .profile-label {
+
+  }
+  .profile-field {
+   font-weight: bold;
+  }
 .profile-img {
   width: 80px;
   height: 80px;
@@ -6,9 +17,12 @@
   display: inline-flex;
   width: 60%;
 }
-.profile-button{
-  background-color: gray;
-}
-.profile-button:hover{
-  background-color: darkgray!important;
+  .social-buttons{
+    display: inline-flex;
+  .social-button{
+    color: $button-color;
+    font-size: 20px;
+    margin: 4px;
+  }
+  }
 }
