--- a/frontend/studente/src/pages/home/home.scss
+++ b/frontend/studente/src/pages/home/home.scss
@@ -3,30 +3,31 @@ page-home {
   float:left;
   display:inline-block;
   width: 50%;
-
-    .home-button {
-      font-weight: bold;
-       height: 50px;
+  padding: 0px 50px;
+  .home-button {
+    font-weight: bold;
+    height: 50px;
     text-align: center;
     line-height: 50px;
-      color: white;
+    color: white;
+
     &.home-registration {
-    background-color: $formation-color;
+      background-color: $formation-color;
+      }
 
-    }
     &.home-exams{
-
-    background-color: $formation-color;
-    }
-    }
-
-}
+      background-color: $formation-color;
+      }
+   }
+  }
 .experiences-list {
   float:right;
   display:inline-block;
   width: 50%;
+  padding: 0px 50px;
+
   .home-experience{
-       height: 50px;
+    height: 50px;
     text-align: center;
     line-height: 50px;
     color: white;
