certificates for stages and certifications

--- a/frontend/studente/src/pages/institute/institute.scss
+++ b/frontend/studente/src/pages/institute/institute.scss
@@ -1,5 +1,6 @@
 .registration-institute-label{
   font-weight: bold;
+  margin-right: 8px;
 }
 .registration-expandable-list{
   display: inline-flex;
