--- a/frontend/studente/src/pages/home/home.scss
+++ b/frontend/studente/src/pages/home/home.scss
@@ -3,7 +3,7 @@ page-home {
   float:left;
   display:inline-block;
   width: 50%;
-  padding: 0px 50px;
+  padding: 0px 5px 0px 50px;
   .home-button {
     font-weight: bold;
     height: 50px;
@@ -24,7 +24,7 @@ page-home {
   float:right;
   display:inline-block;
   width: 50%;
-  padding: 0px 50px;
+  padding: 0px 50px 0px 5px;
 
   .home-experience{
     height: 50px;
