--- a/frontend/studente/src/pages/profile/profile.scss
+++ b/frontend/studente/src/pages/profile/profile.scss
@@ -10,8 +10,10 @@
    font-weight: bold;
   }
 .profile-img {
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .profile-input {
   display: inline-flex;
