--- a/frontend/studente/src/pages/institute/subjects.scss
+++ b/frontend/studente/src/pages/institute/subjects.scss
@@ -4,13 +4,17 @@
     font-weight: bold;
     font-size: 14px;
 }
-.single-subject{
-    margin: 6px;
-    display: inline-flex;
     .single-subject-title{
         margin: 6px;
+        text-align: center;
     }
     .single-subject-teacher{
         margin: 6px;
+        text-align: center;
     }
+.single-subject-header{
+    text-align: center;
+    font-style: italic;
+    font-size: 16px;
+
 }
