--- a/frontend/studente/src/pages/components/app-bar/app-bar.component.html
+++ b/frontend/studente/src/pages/components/app-bar/app-bar.component.html
@@ -4,15 +4,23 @@
  <ion-grid>
     <ion-row>
       <ion-col col-auto>
-          <div><button class="app-bar-button" [block]="true" ion-button >CV</button>
+          <div><button class="app-bar-button" [block]="true" ion-button >Curriculum</button>
         </div>
       </ion-col>
        <ion-col col-auto>
-          <div><button class="app-bar-button" [block]="true" ion-button >APP 2</button>
+          <div><button class="app-bar-button" [block]="true" ion-button >Trova lavoro</button>
         </div>
       </ion-col>
-            <ion-col col-auto>
-          <div><button class="app-bar-button" [block]="true" ion-button>APP 3</button>
+       <ion-col col-auto>
+          <div><button class="app-bar-button" [block]="true" ion-button>Universita`</button>
+        </div>
+      </ion-col>
+             <ion-col col-auto>
+          <div><button class="app-bar-button" [block]="true" ion-button>Moodle</button>
+        </div>
+      </ion-col>
+             <ion-col col-auto>
+          <div><button class="app-bar-button" [block]="true" ion-button>Biblioteca</button>
         </div>
       </ion-col>
     </ion-row>
