--- a/frontend/studente/src/pages/components/app-bar/app-bar.component.scss
+++ b/frontend/studente/src/pages/components/app-bar/app-bar.component.scss
@@ -13,9 +13,9 @@
   }
   .app-bar-button{
     background-color: white;
-    color: black;
+    color: #406584;
     height: 100px;
-    width: 100px;
+    width: 150px;
   }
 
 }
