working on multiple files, changed from certificate to document

--- a/frontend/studente/src/app/app.scss
+++ b/frontend/studente/src/app/app.scss
@@ -80,7 +80,7 @@ $school-color:#00897b;
     width: 100%!important;
     margin: 6px;
   }
-  .experience-certificate{
+  .experience-document{
     width: 50%!important;
     margin: 6px;
   }
