--- a/frontend/studente/src/pages/events/events.scss
+++ b/frontend/studente/src/pages/events/events.scss
@@ -26,7 +26,7 @@
 //  .stage-title{
 //    width: 100%!important;
 //  }
-//  .stage-certificate{
+//  .stage-document{
 //    width: 50%!important;
 //  }
 //    .stage-expansion-icon{
