--- a/frontend/studente/src/pages/exam/exams.scss
+++ b/frontend/studente/src/pages/exam/exams.scss
@@ -22,7 +22,7 @@
     width: 100%!important;
     margin: 6px;
   }
-  .exam-certificate{
+  .exam-document{
     width: 50%!important;
   }
     .registration-expansion-icon{
