--- a/frontend/studente/src/pages/institute/institute.scss
+++ b/frontend/studente/src/pages/institute/institute.scss
@@ -13,7 +13,7 @@
     width: 100%!important;
     margin: 6px;
   }
-  .registration-certificate{
+  .registration-document{
     width: 50%!important;
   }
     .registration-expansion-icon{
