Added UI for CV part

--- a/frontend/studente/src/pages/components/app-bar/app-bar.component.html
+++ b/frontend/studente/src/pages/components/app-bar/app-bar.component.html
@@ -4,7 +4,7 @@
  <ion-grid>
     <ion-row>
       <ion-col col-auto>
-          <div><button class="app-bar-button" [block]="true" ion-button >Curriculum</button>
+          <div><button class="app-bar-button" [block]="true" ion-button (click)="curriculum()">Curriculum</button>
         </div>
       </ion-col>
        <ion-col col-auto>
