--- a/frontend/studente/src/pages/profile/profile.scss
+++ b/frontend/studente/src/pages/profile/profile.scss
@@ -1,30 +1,39 @@
-.profile-page{
+page-activities {
+  
   .profile-title-label{
     color: $button-color;
     font-size: 20px;
   }
-  .profile-label {
-
-  }
+  
   .profile-field {
    font-weight: bold;
   }
-.profile-img {
-  width: 100px;
-  height: 100px;
-  background-position: center center;
-  background-repeat: no-repeat;
-}
-.profile-input {
-  display: inline-flex;
-  width: 60%;
-}
+
+
+  .profile-img {
+    width: 100px;
+    height: 100px;
+     background-position: center center;
+     background-repeat: no-repeat;
+  }
+
+  .profile-input {
+    display: inline-flex;
+    width: 60%;
+  }
+  
   .social-buttons{
     display: inline-flex;
-  .social-button{
-    color: $button-color;
-    font-size: 20px;
-    margin: 4px;
+  
+    .social-button{
+      color: $button-color;
+      font-size: 20px;
+      margin: 4px;
+    }
   }
+
+  .span-input{
+    float: left;
+    width: 70px;
   }
 }
