Added deselect all feature in curriculum page.

--- a/frontend/studente/src/pages/curriculum/curriculum.scss
+++ b/frontend/studente/src/pages/curriculum/curriculum.scss
@@ -58,5 +58,20 @@ page-curriculum{
     }
     .key{
 		color: gray;
-	}
+  }
+  
+  .div-select-all {
+    position: absolute;
+    right: 40px;
+    color: cadetblue;
+    top: 20px;
+  }
+
+  .div-select-all-checkbox {
+    position: absolute;
+    top: 34px;
+    right:20px;
+   }
+   
+ 
 }
