--- a/frontend/studente/src/pages/login/login.scss
+++ b/frontend/studente/src/pages/login/login.scss
@@ -79,7 +79,7 @@ page-login {
   .inner {
     max-width: 978px;
     max-height: 1007px;
-    position: absolute;
-    left: 25%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
