Fixes for session scaduta issue
Added errorstring.json for error labels

--- a/frontend/studente/src/pages/login/login.scss
+++ b/frontend/studente/src/pages/login/login.scss
@@ -13,9 +13,15 @@
   font-size: 22px;
 
 }
+
+.login-error{
+  color: red;
+  text-align: center;
+}
+
 .login-button {
-      width: 150px;
-    height: 150px;
+  width: 150px;
+  height: 150px;
   display: block;
   margin-left: auto;
   margin-right: auto;
